--- a/password.html
+++ b/password.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Privado - La Elipa</title>
+	<title>Privado</title>
 	<script languaje="javascript">
 	var getin = prompt("Introduce la contraseña")
 	if (getin!="TuContraseña")
